<resources>
    <string name="app_name">Carros</string>
    <string name="login">Entrar</string>
    <string name="register">Registrar</string>
    <string name="email">E-mail</string>
    <string name="name">Nome Completo</string>
    <string name="document">CPF</string>
    <string name="password">Senha</string>
    <string name="create_account">Cadastrar</string>
    <string name="not_valid">Campos não estão válidos</string>
    <string name="user_not_found">Usuário não encontrado</string>
    <string name="get_it_now">Reservar agora</string>
    <string name="user_already_exists">Usuário já existente</string>
</resources>
