<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <EditText
            android:id="@+id/edittext_name"
            android:layout_width="0dp"
            android:hint="@string/name"
            android:maxLength="60"
            style="@style/edit_text_default"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_height="54dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />


    <EditText
            android:id="@+id/edittext_email"
            android:layout_width="0dp"
            android:hint="@string/email"
            android:maxLength="60"
            style="@style/edit_text_default"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_height="54dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/edittext_name"/>


    <EditText
            android:id="@+id/edittext_document"
            android:layout_width="0dp"
            android:hint="@string/document"
            android:maxLength="60"
            style="@style/edit_text_default"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_height="54dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:inputType="number"
            android:singleLine="true"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/edittext_email"/>


    <EditText
            android:id="@+id/edittext_password"
            android:layout_width="0dp"
            android:hint="@string/password"
            android:maxLength="60"
            style="@style/edit_text_default"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_height="54dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/edittext_document"
    />

    <Button
            android:id="@+id/button_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"/>

</android.support.constraint.ConstraintLayout>